samples/_failures_safe/1761522043_7b6b44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91659d03.c: In function ‘parser_init’:
./samples/SAFE/__tmp_91659d03.c:152:26: error: expected ‘;’ at end of input
  152 |     parser->current_token
      |                          ^
      |                          ;
./samples/SAFE/__tmp_91659d03.c:152:5: error: expected declaration or statement at end of input
  152 |     parser->current_token
      |     ^~~~~~
